# Representation-Aware-Unlearning-via-Activation-Signatures-KIF

./: README.md  fast_entity_eval_bundle.py  llama_2.0.ipynb  project_context.md  pyproject.toml  requirements.txt  run_pipeline.py
src/llama20/: __init__.py  cli.py  loop.py  module0.py  module8.py  module_a.py  module_d.py
src/llama20/modules/: __init__.py  module0.py  module7.py  module8.py  module_b.py  module_c.py  module_d.py  module_e.py
