[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama20"
version = "0.1.0"
description = "Notebook-split pipeline for the Llama 2.0 research workflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0,<3.0",
    "transformers>=4.38.0,<5.0",
    "bitsandbytes>=0.43.0",
    "peft>=0.11.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "wikipedia>=1.4.0",
    "SPARQLWrapper>=2.0.0",
    "tenacity>=8.2.0",
    "sentence-transformers>=2.2.2",
    "textattack>=0.3.8",
    "compress-pickle>=2.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "psutil>=5.9.0",
    "scipy>=1.11.0",
]

[project.scripts]
llama20 = "llama20.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
